# alps

./: 1d_cellular_automaton.ipynb  LICENSE  README.md  pyproject.toml
