[project]
name = "artificial-life-assignments"
version = "0.1.0"
description = "A collection of Bonn University's Artificial Life [MA-INF 4201] course implementations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "matplotlib>=3.10.1",
]
